Fixed overflowing logo issue on mobile

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,6 +1,7 @@
 .about-landing {
   padding-top: 25px;
   margin-bottom: 35px;
+  overflow: hidden;
 }
 
 .page-template-about {
