--- a/scss/_events.scss
+++ b/scss/_events.scss
@@ -1,5 +1,6 @@
 .events-menu {
   margin: 25px auto;
+  overflow: hidden;
 }
 
 .events-archive .entry-content, .events-archive .entry-header {
